--- a/scss/pages/_faces.scss
+++ b/scss/pages/_faces.scss
@@ -1,5 +1,5 @@
 .content .image-holder{
-  height: 5rem;
+  height: auto;
   width: 100%;
   position: relative;
   padding-bottom: 1rem;
@@ -27,7 +27,7 @@
 }
 
 .faces-holder{
-  max-height: 79%;
+  max-height: 34rem;
   overflow: auto;
 
 }
