--- a/scss/pages/_faq.scss
+++ b/scss/pages/_faq.scss
@@ -1,7 +1,7 @@
-.data .content h1{
+.faq .content h1{
   font-family: IBM-Medium;
 }
 
-.data .content p{
+.faq .content p{
   font-family: IBM-Medium;
 }
