--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible">
-    <title>Risk Profile</title>
+    <title>Catch Your Crime Profile</title>
 
 
     <!-- bootstrap 5 -->
@@ -45,8 +45,8 @@
                 <nav>
                     <ul class="navigation">
                         <li><a href="/">>_Catch your <br>Crime Profile</a></li>
-                        <li><a href="/about">>_About</a></li>
-                        <li><a href="/faq">>_Faq</a></li>
+                        <li><a href="/about.html">>_About</a></li>
+                        <li><a href="/faq.html">>_Faq</a></li>
                     </ul>
                 </nav>
             </div>
@@ -90,7 +90,10 @@
                                         <!--This application reveals your position within the sociaty based on machine learning algorithms and historical crime data.-->
                                         <!--Scan your face and get to know your position within the sociaty based on machine learning algorithms and historical crime data.-->
                                     </p>
-                                    <a class="cta col-5 " href="analyzer.html">Scan your face</a>
+                                    <div class="col-4">
+                                        <a class="cta" href="analyzer.html">Scan your face</a>
+                                    </div>
+
                                 </div>
                             <!--</fieldset>-->
                         </div>
@@ -122,17 +125,17 @@
 
 </main>
 
-<footer>
     <footer>
         <div id="bar">
             <ul id="progressbar">
                 <li class="active current" id="step1"><a href="/">Introduction</a> </li>
-                <li class="" id="step2"><a href="/analyzer.html"> Crime PROFILE</a></li>
-                <li class="" id="step3"><a href="/faces.html"> View similar faces</a></li>
-                <li class="" id="step4"><a href="/data.html"> Data usage</a></li>
+                <li class="" id="step2"><a href="/analyzer.html"> Face analyzer</a></li>
+                <li class="" id="step3"><a href="/faces.html"> Mugshot database</a></li>
+                <!--<li class="" id="step4"><a href="/faq.html"> Faq</a></li>-->
+            </ul>
         </div>
     </footer>
-</footer>
+
 
 
 </body>
