--- a/scss/globals/_footer.scss
+++ b/scss/globals/_footer.scss
@@ -43,9 +43,11 @@ footer{
   opacity: 1;
 }
 
+
+
 #progressbar li {
   list-style-type: none;
-  width: 25%;
+  width: 33.3333%;
   position: relative;
   transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
 }
@@ -64,9 +66,9 @@ footer{
   content: "";
 }
 
-#progressbar #step4:after {
-  content: "";
-}
+//#progressbar #step4:after {
+//  content: "";
+//}
 
 
 
@@ -77,7 +79,7 @@ footer{
   display: block;
   color: #ffffff;
   //background: $lightblack;
-  margin: 10px 0px 10px;
+  margin: 10px 0px 1px;
   padding: .5rem;
 }
 
@@ -101,8 +103,18 @@ footer{
     width: 45%;
   }
 }
+#progressbar .last:after{
+  width: 100%;
+}
 
 
 .progress-bar {
   background-color: $darkblue;
+}
+
+
+
+#progressbar li a:hover{
+  color: $white_white!important;
+  opacity: 1;
 }
