--- a/views/about.html
+++ b/views/about.html
@@ -2,81 +2,134 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Barba.js Guide</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible">
+  <title>Catch Your Crime Profile</title>
 
+
+  <!-- bootstrap 5 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap-grid.min.css" rel="stylesheet"
+        crossorigin="anonymous">
+  <!-- style -->
   <link rel="stylesheet" href="css/styles.css">
 
-  <script defer src="js/face-api.min.js"></script>
+
+  <!-- load jquery for kairos -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <!-- load face api -->
+  <script defer src="js/face-api.min.js"></script>
+  <!-- load kairos api -->
   <script src="js/kairos.js"></script>
 
 </head>
 
 
-<section class="analyzer__section">
+<body data-barba="wrapper">
 
-  <div id="my_camera"></div>
-  <div id="kairos_response" class="col-lg-6"
-       style="padding:10px;border:1px solid rgba(51, 51, 51, 0.08);background-color:
-               rgba(204, 204, 204, 0.26);color:#fff;"><i>(Response will appear here)</i></div>
+<div class="page-loader">
+  <div class="notification d-flex align-items-center justify-content-center">
+    <div class="notification-content">
+      <div class="loader"><img src="img/loader9.gif"><p>Loading page...</p></div>
+    </div>
+  </div>
+</div>
+
+<main data-barba="container" data-barba-namespace="about" data-title="about">
+
+  <div class="container">
+    <header class="pb-3">
+      <!-- start row -->
+      <div class="row ">
+        <div class="col-12">
+          <nav>
+            <ul class="navigation">
+              <li><a href="/">>_Catch your <br>Crime Profile</a></li>
+              <li><a href="/about.html">>_About</a></li>
+              <li><a href="/faq.html">>_Faq</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <!-- end row -->
+    </header>
+  </div>
 
 
-</section>
 
 
-<body class="page">
+  <article class="about page">
+    <section class="index__section">
+      <!-- start container -->
+      <div class="container d-flex">
+
+        <!-- start row -->
+        <div class="row">
 
 
+          <!-- start column 2 -->
+          <div class="col-12">
+            <!--<fieldset class="box-border">-->
+            <!--<legend class="box-border">>_INTRODUCTION</legend>-->
+            <div class="content">
+              <h1>About</h1>
+              <ul>
+                <li>>_How does this application work?</li>
+                <li>>_Which dataset is used within the application?</li>
+                <li>>_Will this application store my data?</li>
+                <li>>_What third-party machine learning API services are integrated?</li>
+                <li>>_What will the third-party API Services do with my data?</li>
+                <li>>_What will the third-party API Services do with my data?</li>
+                <li>>_What permissions does the application require?</li>
+              </ul>
+
+            </div>
+            <!--</fieldset>-->
+          </div>
+          <!-- end column 2 -->
 
 
+        </div>
+        <!-- end row -->
 
-  <header class="header">
-    <section class="github-button-section">
+      </div>
+      <!-- End container -->
 
     </section>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="analyzer.html">Analyzer</a>
-      <a href="resources.html">Resources</a>
-    </nav>
-  </header>
+  </article>
 
-  <section data-barba="wrapper">
-    <main data-barba="container" data-barba-namespace="resources" data-title="resources">
-      <article class="resources page">
 
-        <section class="resources__section">
-          <section class="resources__section-content">
-            <h2>Endless Reading</h2>
+</main>
 
-          </section>
-        </section>
-      </article>
-    </main>
-  </section>
 
-  <footer class="footer">
-    <section class="footer__section">
-      <p>
-        Made with the <a href="https://github.com/dracula/dracula-theme/">Dracula Theme</a>.
-      </p>
-      <p>
-        Not responsive for mobile, use your laptop/desktop for reading this guide.
-      </p>
-    </section>
-  </footer>
+<footer>
+  <div id="bar">
+    <ul id="progressbar">
+      <li class="" id="step1"><a href="/">Introduction</a> </li>
+      <li class="" id="step2"><a href="analyzer.html"> Face analyzer</a></li>
+      <li class="" id="step3"><a href="faces.html"> Mugshot database</a></li>
+      <!--<li class="active current" id="step4"><a href="/data.html"> faq</a></li>-->
+    </ul>
+  </div>
+</footer>
+
+
 </body>
 
 
+<!-- load webcam -->
 <script src="js/webcam.min.js"></script>
+
+<!-- face detection -->
 <script src="js/detect.js"></script>
 
+<!-- barbare page transitions -->
 <script src="js/barba.core.js"></script>
 <script src="js/gsap.min.js"></script>
-<script async type=module src="js/app.js"></script>
 
+<!-- project script -->
+<script async src="js/app.js"></script>
+
+<script async src="js/dataset.js"></script>
 
 
 </html>
