--- a/views/analyzer.html
+++ b/views/analyzer.html
@@ -48,6 +48,14 @@
         </div>
         <div class="content pt-4 pb-3">
          <p></p>
+          <div class="row options not-visible">
+            <div class="col-6">
+              <button class="disagree cta">Disagree</button>
+            </div>
+            <div class="col-6">
+              <button class="agree cta">Agree</button>
+            </div>
+          </div>
         </div>
       </fieldset>
     </div>
@@ -64,8 +72,8 @@
             <nav>
               <ul class="navigation">
                 <li><a href="/">>_Catch your <br>Crime Profile</a></li>
-                <li><a href="/datausage">>_Data usage</a></li>
-                <li><a href="/about">>_About</a></li>
+                <li><a href="/about.html">>_About</a></li>
+                <li><a href="/faq.html">>_Faq</a></li>
               </ul>
             </nav>
           </div>
@@ -93,7 +101,7 @@
                 <div class="helper-box">
                   <div class="helper"   data-msg="
                   Based on your facial characteristics, the system tries classify your gender, age and ethnicity with a confidence score.
-                  The confidence score is a number between 0 and 100. A score of 100 is likely an exact match, while a score of 0 means, that no matching answer was found. The higher the score the greater the confidence in the answer.
+                  The confidence score is a number between 0 and 100. A score of 100 is likely an exact match, while a score of 0 means, that no matching answer was found. The higher the score the greater the confidence in the classification.
                   "
                   >?</div>
                 </div>
@@ -197,7 +205,7 @@
                   </p>
                   <!--<div id="my_dataviz"></div>-->
                   <canvas id="myChart" class="pb-3" width="100vw" height="100vw"></canvas>
-                  <a class="cta save-data disabled" href="javascript:;" onclick="snapData(); return false;">View similar faces</a>
+                  <button class="buttonOptions cta save-data disabled "  data-msg="This application is building a database of faces to categorize them and to">Create mugshot</button>
                 </div>
 
               </fieldset>
@@ -231,18 +239,18 @@
 
 
 
-  <footer>
+
     <footer>
       <div id="bar">
         <ul id="progressbar">
           <li class="active" id="step1"><a href="/">Introduction</a> </li>
-          <li class="active current" id="step2"><a href="/analyzer.html"> Crime PROFILE</a></li>
-          <li id="step3"><a href="/faces.html"> View similar faces</a></li>
-          <li id="step4"><a href="/data.html"> Data usage</a></li>
+          <li class="active current" id="step2"><a href="/analyzer.html"> Face analyzer</a></li>
+          <li class="" id="step3"><a href="/faces.html"> Mugshot database</a></li>
+          <!--<li class="" id="step4"><a href="/faq.html"> Faq</a></li>-->
         </ul>
       </div>
     </footer>
-  </footer>
+
 
 
 
@@ -281,5 +289,22 @@
 <!-- project script -->
 <script async src="js/app.js"></script>
 <script src="js/cameraAvailablity.js"></script>
+
+
+<script>
+
+  document.querySelector('.disagree').addEventListener('click',function(event){
+    event.stopPropagation();
+    event.preventDefault();
+    snapData(false);
+  });
+
+  document.querySelector('.agree').addEventListener('click',function(event){
+    event.stopPropagation();
+    event.preventDefault();
+    snapData(true);
+  });
+
+</script>
 
 </html>
