--- a/views/faces.html
+++ b/views/faces.html
@@ -32,7 +32,7 @@
 <div class="page-loader">
   <div class="notification d-flex align-items-center justify-content-center">
     <div class="notification-content">
-      <div class="loader"><img src="img/loader9.gif"><p>Connecting with AI center..</p></div>
+      <div class="loader"><img src="img/loader9.gif"><p>Connecting with database..</p></div>
     </div>
   </div>
 </div>
@@ -48,6 +48,14 @@
         </div>
         <div class="content pt-4 pb-3">
           <p></p>
+          <div class="row options not-visible">
+            <div class="col-6">
+              <button class="disagree cta">Disagree</button>
+            </div>
+            <div class="col-6">
+              <button class="agree cta">Agree</button>
+            </div>
+          </div>
         </div>
       </fieldset>
     </div>
@@ -65,8 +73,8 @@
             <nav>
               <ul class="navigation">
                 <li><a href="/">>_Catch your <br>Crime Profile</a></li>
-                <li><a href="/about">>_About</a></li>
-                <li><a href="/faq">>_Faq</a></li>
+                <li><a href="/about.html">>_About</a></li>
+                <li><a href="/faq.html">>_Faq</a></li>
               </ul>
             </nav>
           </div>
@@ -87,7 +95,7 @@
           <div class="row ">
 
             <!-- start column 1 -->
-            <div class="col-xxl-4 col-xl-12 ">
+            <div class="col-xxl-4 col-xl-6  col-md-12">
 
               <fieldset class="box-border">
                 <legend class="box-border">>_Your profile</legend>
@@ -141,29 +149,32 @@
                       </div>
                     </div>
 
+                    <div class="col-8 col-xxl-12">
+                      <p>
+                        <!--Met jou uiterlijke kenmerken behoor je tot een groep waarvan-->
+                        <!--<span class="risk-percentage">&#45;&#45;%</span> van de <span class="gender-category">...</span>-->
+                        <!--tussen de  <span class="age-category">... jaar</span> met een-->
+                        <!--<span class="ethnicity-category">...</span> in Nederland-->
+                        <!--is aangehouden voor het plegen van een <span class="crime-category">...</span>.-->
+
+
+                        Based on the facial features, this face represents a group of
+                        <span class="gender-category">...</span>
+                        between the ages of <span class="age-category">...</span>
+                        with a <span class="ethnicity-category">...</span>
+                        where <span class="risk-percentage">&#45;&#45;%</span>
+                        have been arrested for committing <span class="crime-category">...</span> in The Netherlands.
+
+
+
+                        <!--Met jou uiterlijke kenmerken behoor je tot een groep waarvan tussen 2014 en 2015 <span class="risk-percentage">46%</span> een <span class="crime-category">vermogensmisdrijf</span> heeft gepleegd.-->
+                      </p>
+                    </div>
+
                   </div>
 
-                  <p>
-                    <!--Met jou uiterlijke kenmerken behoor je tot een groep waarvan-->
-                    <!--<span class="risk-percentage">&#45;&#45;%</span> van de <span class="gender-category">...</span>-->
-                    <!--tussen de  <span class="age-category">... jaar</span> met een-->
-                    <!--<span class="ethnicity-category">...</span> in Nederland-->
-                    <!--is aangehouden voor het plegen van een <span class="crime-category">...</span>.-->
-
-
-                    Based on the facial features, this face represents a group of
-                    <span class="gender-category">...</span>
-                    between the ages of <span class="age-category">...</span>
-                    with a <span class="ethnicity-category">...</span>
-                    where <span class="risk-percentage">&#45;&#45;%</span>
-                    have been arrested for committing <span class="crime-category">...</span> in The Netherlands.
-
-
-
-                    <!--Met jou uiterlijke kenmerken behoor je tot een groep waarvan tussen 2014 en 2015 <span class="risk-percentage">46%</span> een <span class="crime-category">vermogensmisdrijf</span> heeft gepleegd.-->
-                  </p>
                   <!--<div id="my_dataviz"></div>-->
-                  <canvas id="myChart" class="pb-3"></canvas>
+                  <canvas id="myChart" class="pb-3" width="100vw" height="95vw"></canvas>
                   <!--<a class="cta" href="">View similar faces</a>-->
                 </div>
               </fieldset>
@@ -175,9 +186,9 @@
 
 
             <!-- start column 3 -->
-            <div class="col-xxl-8 col-xl-12">
+            <div class="col-xxl-8 col-xl-6 col-md-12">
               <fieldset class="box-border">
-                <legend class="box-border">>_Similar faces</legend>
+                <legend class="box-border">>_Faces with similar profile</legend>
                 <div class="helper-box">
                   <div class="helper"  data-msg="Based on your crime profile the system will find similar faces in database with the same crime profiles. The mugshots are sorted by age from young to old">?</div>
                 </div>
@@ -219,18 +230,17 @@
 
 
 
-  <footer>
     <footer>
       <div id="bar">
         <ul id="progressbar">
           <li class="active" id="step1"><a href="/">Introduction</a> </li>
-          <li class="active" id="step2"><a href="/analyzer.html"> Crime PROFILE</a></li>
-          <li class="active current" id="step3"><a href="/faces.html">Similar faces</a></li>
-          <li id="step4"><a href="/data.html"> Data usage</a></li>
+          <li class="active" id="step2"><a href="/analyzer.html"> Face analyzer</a></li>
+          <li class="active last" id="step3"><a href="/faces.html">Mugshot database</a></li>
+          <!--<li id="step4"><a href="/faq.html"> FAQ</a></li>-->
         </ul>
       </div>
     </footer>
-  </footer>
+
 
 
 </body>
@@ -253,181 +263,174 @@
 <script src="js/db.js"></script>
 <script src="js/detect.js"></script>
 
-<script>
+<script async>
 
-  let image = localStorage.getItem('image');
-  let gender = localStorage.getItem('gender');
-  let age_cat = localStorage.getItem('age_cat');
-  let age = ageChecker(localStorage.getItem('age'));
-  let ethnicity = localStorage.getItem('ethnicity');
+  window.addEventListener('load', function() {
+    let image = localStorage.getItem('image');
+    let gender = localStorage.getItem('gender');
+    let age_cat = localStorage.getItem('age_cat');
+    let age = ageChecker(localStorage.getItem('age'));
+    let ethnicity = localStorage.getItem('ethnicity');
 
-  getFaces(gender,age_cat,localStorage.getItem('age'),ethnicity);
+    if (image !== '' && gender !== '' && age_cat !== '' && age !== '' && ethnicity !== '') {
 
-
-  getData(gender,age,ethnicity);
-  getAges();
-
-
-
-  if(image) {
-    document.querySelector(".image-holder img").src = image;
-    addSelected('genderSelection',gender);
-    addSelected('ethnicitySelection',ethnicity);
-  }
-  
-  function getData(gender,age,ethnicity){
-
-    if(ethnicity == "white"){
-      let ethnicity =  "dutch background";
-      getChart('../data/aanhoudingen/NA_verdachten_aanhoudingen.json',age,gender);
-      document.querySelector('.gender-category').innerHTML = gender;
-      document.querySelector('.ethnicity-category').innerHTML = ethnicity;
-
-    }else if(ethnicity == "black"){
-      let ethnicity = "migration background";
-      getChart('../data/aanhoudingen/MMA_verdachten_aanhoudingen.json',age,gender);
-      document.querySelector('.gender-category').innerHTML = gender;
-      document.querySelector('.ethnicity-category').innerHTML = ethnicity;
-
-    }else if(ethnicity == "asian"){
-      let ethnicity ="non-western migration background";
-      getChart('../data/aanhoudingen/NWMA_verdachten_aanhoudingen.json',age,gender);
-      document.querySelector('.gender-category').innerHTML = gender;
-      document.querySelector('.ethnicity-category').innerHTML = ethnicity;
-
-    }else if(ethnicity == "hispanic"){
-      let ethnicity = "western migration background";
-      getChart('../data/aanhoudingen/WMA_verdachten_aanhoudingen.json',age,gender);
-      document.querySelector('.gender-category').innerHTML = gender;
-      document.querySelector('.ethnicity-category').innerHTML = ethnicity;
+      document.querySelector('.faces').style.display = 'none';
+      notify('To view this page you need to scan your face first');
+      setTimeout(function() {
+        window.location = '/analyzer.html';
+      }, 5000);
 
     }
-    else if(ethnicity == "other"){
-      let ethnicity = "unknown migration background";
-      getChart('../data/aanhoudingen/OMA_verdachten_aanhoudingen.json',age,gender);
-      document.querySelector('.gender-category').innerHTML = gender;
-      document.querySelector('.ethnicity-category').innerHTML = ethnicity;
 
-    }
-  }
+    getFaces(gender, age_cat, localStorage.getItem('age'), ethnicity);
 
+    getData(gender, age, ethnicity);
+    getAges();
 
-
-
-  function getAges(){
-    let ageSelection = document.querySelector('#ageSelection');
-    for (let i =12; i < 100; i++) {
-      var opt = document.createElement('option');
-      opt.value = i;
-      opt.innerHTML = i;
-      ageSelection.appendChild(opt);
-
-      // ageSelection.append('<option value="'+i+'">'+i+'</option>');
+    if (image) {
+      document.querySelector(".image-holder img").src = image;
+      addSelected('genderSelection', gender);
+      addSelected('ethnicitySelection', ethnicity);
     }
 
-    addSelected('ageSelection',localStorage.getItem('age'));
-  }
+    function getData(gender, age, ethnicity) {
 
+      if (ethnicity == "white") {
+        let ethnicity = "dutch background";
+        getChart('../data/aanhoudingen/NA_verdachten_aanhoudingen.json', age, gender);
+        document.querySelector('.gender-category').innerHTML = gender;
+        document.querySelector('.ethnicity-category').innerHTML = ethnicity;
 
+      } else if (ethnicity == "black") {
+        let ethnicity = "migration background";
+        getChart('../data/aanhoudingen/MMA_verdachten_aanhoudingen.json', age, gender);
+        document.querySelector('.gender-category').innerHTML = gender;
+        document.querySelector('.ethnicity-category').innerHTML = ethnicity;
 
-  function updateChart() {
+      } else if (ethnicity == "asian") {
+        let ethnicity = "non-western migration background";
+        getChart('../data/aanhoudingen/NWMA_verdachten_aanhoudingen.json', age, gender);
+        document.querySelector('.gender-category').innerHTML = gender;
+        document.querySelector('.ethnicity-category').innerHTML = ethnicity;
+
+      } else if (ethnicity == "hispanic") {
+        let ethnicity = "western migration background";
+        getChart('../data/aanhoudingen/WMA_verdachten_aanhoudingen.json', age, gender);
+        document.querySelector('.gender-category').innerHTML = gender;
+        document.querySelector('.ethnicity-category').innerHTML = ethnicity;
+
+      } else if (ethnicity == "other") {
+        let ethnicity = "unknown migration background";
+        getChart('../data/aanhoudingen/OMA_verdachten_aanhoudingen.json', age, gender);
+        document.querySelector('.gender-category').innerHTML = gender;
+        document.querySelector('.ethnicity-category').innerHTML = ethnicity;
+
+      }
+    }
+
+    function getAges() {
+      let ageSelection = document.querySelector('#ageSelection');
+      for (let i = 12; i < 100; i++) {
+        var opt = document.createElement('option');
+        opt.value = i;
+        opt.innerHTML = i;
+        ageSelection.appendChild(opt);
+
+        // ageSelection.append('<option value="'+i+'">'+i+'</option>');
+      }
+
+      addSelected('ageSelection', localStorage.getItem('age'));
+    }
+
+    function updateChart() {
       let gender = document.querySelector('#genderSelection').value;
       let age = document.querySelector('#ageSelection').value;
       let ethnicity = document.querySelector('#ethnicitySelection').value;
 
+      ageChecker(age);
 
-    ageChecker(age);
+      console.log(gender);
+      console.log(ageChecker(age));
+      console.log(ethnicity);
 
-    console.log(gender);
-    console.log( ageChecker(age));
-    console.log(ethnicity);
+      if (ethnicity == "white") {
+        let ethnicity = "dutch background";
+        getChart('../data/aanhoudingen/NA_verdachten_aanhoudingen.json', ageChecker(age), gender);
+        document.querySelector('.gender-category').innerHTML = gender;
+        document.querySelector('.ethnicity-category').innerHTML = ethnicity;
 
-    if(ethnicity == "white"){
-      let ethnicity =  "dutch background";
-      getChart('../data/aanhoudingen/NA_verdachten_aanhoudingen.json',ageChecker(age),gender);
-      document.querySelector('.gender-category').innerHTML = gender;
-      document.querySelector('.ethnicity-category').innerHTML = ethnicity;
+      } else if (ethnicity == "black") {
+        let ethnicity = "migration background";
+        getChart('../data/aanhoudingen/MMA_verdachten_aanhoudingen.json', ageChecker(age), gender);
+        document.querySelector('.gender-category').innerHTML = gender;
+        document.querySelector('.ethnicity-category').innerHTML = ethnicity;
 
-    }else if(ethnicity == "black"){
-      let ethnicity = "migration background";
-      getChart('../data/aanhoudingen/MMA_verdachten_aanhoudingen.json',ageChecker(age),gender);
-      document.querySelector('.gender-category').innerHTML = gender;
-      document.querySelector('.ethnicity-category').innerHTML = ethnicity;
+      } else if (ethnicity == "asian") {
+        let ethnicity = "non-western migration background";
+        getChart('../data/aanhoudingen/NWMA_verdachten_aanhoudingen.json', ageChecker(age), gender);
+        document.querySelector('.gender-category').innerHTML = gender;
+        document.querySelector('.ethnicity-category').innerHTML = ethnicity;
 
-    }else if(ethnicity == "asian"){
-      let ethnicity ="non-western migration background";
-      getChart('../data/aanhoudingen/NWMA_verdachten_aanhoudingen.json',ageChecker(age),gender);
-      document.querySelector('.gender-category').innerHTML = gender;
-      document.querySelector('.ethnicity-category').innerHTML = ethnicity;
+      } else if (ethnicity == "hispanic") {
+        let ethnicity = "western migration background";
+        getChart('../data/aanhoudingen/WMA_verdachten_aanhoudingen.json', ageChecker(age), gender);
+        document.querySelector('.gender-category').innerHTML = gender;
+        document.querySelector('.ethnicity-category').innerHTML = ethnicity;
 
-    }else if(ethnicity == "hispanic"){
-      let ethnicity = "western migration background";
-      getChart('../data/aanhoudingen/WMA_verdachten_aanhoudingen.json',ageChecker(age),gender);
-      document.querySelector('.gender-category').innerHTML = gender;
-      document.querySelector('.ethnicity-category').innerHTML = ethnicity;
+      } else if (ethnicity == "other") {
+        let ethnicity = "unknown migration background";
+        getChart('../data/aanhoudingen/OMA_verdachten_aanhoudingen.json', ageChecker(age), gender);
+        document.querySelector('.gender-category').innerHTML = gender;
+        document.querySelector('.ethnicity-category').innerHTML = ethnicity;
+
+      }
+
+      getFaces(gender, ageChecker(age), age, ethnicity)
 
     }
-    else if(ethnicity == "other"){
-      let ethnicity = "unknown migration background";
-      getChart('../data/aanhoudingen/OMA_verdachten_aanhoudingen.json',ageChecker(age),gender);
-      document.querySelector('.gender-category').innerHTML = gender;
-      document.querySelector('.ethnicity-category').innerHTML = ethnicity;
 
+    function between(x, min, max) {
+      return x >= min && x <= max;
     }
 
-
-    getFaces(gender,ageChecker(age),age,ethnicity)
-
-
-
-  }
-
-
-
-  function between(x, min, max) {
-    return x >= min && x <= max;
-  }
-
-  function ageChecker(age) {
-    if (between(age, 12, 18)) {
-      age = "12-18";
-      document.querySelector('.age-category').innerHTML = age;
-    } else if (between(age, 18, 25)) {
-      age = "18-25";
-      document.querySelector('.age-category').innerHTML = age;
-    } else if (between(age, 25, 45)) {
-      age = "25-45";
-      document.querySelector('.age-category').innerHTML = age;
-    } else if (between(age, 45, 65)) {
-      age = "45-65";
-      document.querySelector('.age-category').innerHTML = age;
-    } else if (age >= 65) {
-      age = "65-65+";
-      document.querySelector('.age-category').innerHTML = age;
+    function ageChecker(age) {
+      if (between(age, 12, 18)) {
+        age = "12-18";
+        document.querySelector('.age-category').innerHTML = age;
+      } else if (between(age, 18, 25)) {
+        age = "18-25";
+        document.querySelector('.age-category').innerHTML = age;
+      } else if (between(age, 25, 45)) {
+        age = "25-45";
+        document.querySelector('.age-category').innerHTML = age;
+      } else if (between(age, 45, 65)) {
+        age = "45-65";
+        document.querySelector('.age-category').innerHTML = age;
+      } else if (age >= 65) {
+        age = "65-65+";
+        document.querySelector('.age-category').innerHTML = age;
+      }
+      return age;
     }
-    return age;
-  }
 
+    function addSelected(element, value) {
+      let select = document.getElementById(element);
+      let option;
 
+      for (let i = 0; i < select.options.length; i++) {
+        option = select.options[i];
 
-  function addSelected(element,value) {
-    let select = document.getElementById(element);
-    let option;
+        if (option.value == value) {
 
-
-
-    for (let i = 0; i < select.options.length; i++) {
-      option = select.options[i];
-
-      if (option.value == value) {
-
-        // or
-        // if (option.text == 'Malaysia') {
-        option.selected = 'selected';
-        return;
+          // or
+          // if (option.text == 'Malaysia') {
+          option.selected = 'selected';
+          return;
+        }
       }
     }
-  }
+
+  });
 
 
 
