--- a/views/faq.html
+++ b/views/faq.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible">
-    <title>Risk Profile</title>
+    <title>Catch Your Crime Profile</title>
 
 
     <!-- bootstrap 5 -->
@@ -34,7 +34,7 @@
     </div>
 </div>
 
-<main data-barba="container" data-barba-namespace="index" data-title="Intro">
+<main data-barba="container" data-barba-namespace="faq" data-title="faq">
 
 <div class="container">
     <header class="pb-3">
@@ -44,8 +44,8 @@
                 <nav>
                     <ul class="navigation">
                         <li><a href="/">>_Catch your <br>Crime Profile</a></li>
-                        <li><a href="/about">>_About</a></li>
-                        <li><a href="/faq">>_Faq</a></li>
+                        <li><a href="/about.html">>_About</a></li>
+                        <li><a href="/faq.html">>_Faq</a></li>
                     </ul>
                 </nav>
             </div>
@@ -57,7 +57,7 @@
 
 
 
-        <article class="data page">
+        <article class="faq page">
             <section class="index__section">
                 <!-- start container -->
                 <div class="container d-flex">
@@ -67,21 +67,20 @@
 
 
                         <!-- start column 2 -->
-                        <div class="col-6">
+                        <div class="col-12">
                             <!--<fieldset class="box-border">-->
                                 <!--<legend class="box-border">>_INTRODUCTION</legend>-->
                                 <div class="content">
-                                    <h1>>_Data usage</h1>
-                                    <p class="pb-4">
-                                        <!--Facial recognition  -->
-
-                                        Scan your face and see how your facial features are represented within the dutch crime data.
-                                        Your crime profile will be based on machine learning algorithms and historical crime data.
-
-                                        <!--How are your facial features represented within the dutch crime data?<br>-->
-                                        <!--This application reveals your position within the sociaty based on machine learning algorithms and historical crime data.-->
-                                        <!--Scan your face and get to know your position within the sociaty based on machine learning algorithms and historical crime data.-->
-                                    </p>
+                                    <h1>Frequently Asked Questions</h1>
+                                   <ul>
+                                       <li>>_How does this application work?</li>
+                                       <li>>_Which dataset is used within the application?</li>
+                                       <li>>_Will this application store my data?</li>
+                                       <li>>_What third-party machine learning API services are integrated?</li>
+                                       <li>>_What will the third-party API Services do with my data?</li>
+                                       <li>>_What will the third-party API Services do with my data?</li>
+                                       <li>>_What permissions does the application require?</li>
+                                   </ul>
 
                                 </div>
                             <!--</fieldset>-->
@@ -101,16 +100,16 @@
 
 </main>
 
+
 <footer>
-    <footer>
         <div id="bar">
             <ul id="progressbar">
-                <li class="active" id="step1"><a href="/">Introduction</a> </li>
-                <li class="active" id="step2"><a href="analyzer.html"> Crime PROFILE</a></li>
-                <li class="active" id="step3"><a href="faces.html"> View similar faces</a></li>
-                <li class="active current" id="step4"><a href="/data.html"> Data usage</a></li>
+                <li class="" id="step1"><a href="/">Introduction</a> </li>
+                <li class="" id="step2"><a href="analyzer.html"> Face analyzer</a></li>
+                <li class="" id="step3"><a href="faces.html"> Mugshot database</a></li>
+                <!--<li class="active current" id="step4"><a href="/data.html"> faq</a></li>-->
+            </ul>
         </div>
-    </footer>
 </footer>
 
 
