added texual and js fixes

--- a/views/analyzer.html
+++ b/views/analyzer.html
@@ -48,12 +48,12 @@
         </div>
         <div class="content pt-4 pb-3">
          <p></p>
-          <div class="row options not-visible">
+          <div class="row options not-visible pt-1">
             <div class="col-6">
-              <button class="disagree cta">Disagree</button>
+              <button class="disagree cta">No</button>
             </div>
             <div class="col-6">
-              <button class="agree cta">Agree</button>
+              <button class="agree cta">Yes</button>
             </div>
           </div>
         </div>
@@ -205,7 +205,7 @@
                   </p>
                   <!--<div id="my_dataviz"></div>-->
                   <canvas id="myChart" class="pb-3" width="100vw" height="100vw"></canvas>
-                  <button class="buttonOptions cta save-data disabled "  data-msg="This application is building a database of faces to categorize them and to">Create mugshot</button>
+                  <button class="buttonOptions cta save-data disabled "  data-msg="Do we have permission to save your photo so it can be used in our application? If not, we will store your data only locally and it will only be visible to you.">Create mugshot and view data</button>
                 </div>
 
               </fieldset>
