added page fixes

--- a/views/analyzer.html
+++ b/views/analyzer.html
@@ -32,7 +32,7 @@
 <div class="page-loader">
   <div class="notification d-flex align-items-center justify-content-center">
     <div class="notification-content">
-      <div class="loader"><img src="img/loader9.gif"><p>Connecting to API services...</p></div>
+      <div class="loader"><img src="img//loader9.gif"><p>Connecting to API services...</p></div>
     </div>
   </div>
 </div>
@@ -71,9 +71,9 @@
           <div class="col-12">
             <nav>
               <ul class="navigation">
-                <li><a href="/">>_Catch your <br>Crime Profile</a></li>
-                <li><a href="/about.html">>_About</a></li>
-                <li><a href="/faq.html">>_Faq</a></li>
+                <li><a href="index.html">>_Catch your <br>Crime Profile</a></li>
+                <li><a href="about.html">>_About</a></li>
+                <li><a href="faq.html">>_Faq</a></li>
               </ul>
             </nav>
           </div>
@@ -243,9 +243,9 @@
     <footer>
       <div id="bar">
         <ul id="progressbar">
-          <li class="active" id="step1"><a href="/">Introduction</a> </li>
-          <li class="active current" id="step2"><a href="/analyzer.html"> Face analyzer</a></li>
-          <li class="" id="step3"><a href="/faces.html"> Mugshot database</a></li>
+          <li class="active" id="step1"><a href="index.html">Introduction</a> </li>
+          <li class="active current" id="step2"><a href="analyzer.html"> Face analyzer</a></li>
+          <li class="" id="step3"><a href="faces.html"> Mugshot database</a></li>
           <!--<li class="" id="step4"><a href="/faq.html"> Faq</a></li>-->
         </ul>
       </div>
