--- a/views/faces.html
+++ b/views/faces.html
@@ -32,7 +32,7 @@
 <div class="page-loader">
   <div class="notification d-flex align-items-center justify-content-center">
     <div class="notification-content">
-      <div class="loader"><img src="img/loader9.gif"><p>Connecting with database..</p></div>
+      <div class="loader"><img src="img//loader9.gif"><p>Connecting with database..</p></div>
     </div>
   </div>
 </div>
@@ -72,9 +72,9 @@
           <div class="col-12">
             <nav>
               <ul class="navigation">
-                <li><a href="/">>_Catch your <br>Crime Profile</a></li>
-                <li><a href="/about.html">>_About</a></li>
-                <li><a href="/faq.html">>_Faq</a></li>
+                <li><a href="index.html">>_Catch your <br>Crime Profile</a></li>
+                <li><a href="about.html">>_About</a></li>
+                <li><a href="faq.html">>_Faq</a></li>
               </ul>
             </nav>
           </div>
@@ -193,7 +193,7 @@
                   <div class="helper"  data-msg="Based on your crime profile the system will find similar faces in database with the same crime profiles. The mugshots are sorted by age from young to old">?</div>
                 </div>
                 <div class="content faces-holder">
-                  <div class="loader not-visible"><img src="img/loader9.gif"><p>Loading mugshots..</p></div>
+                  <div class="loader not-visible"><img src="img//loader9.gif"><p>Loading mugshots..</p></div>
                   <div class="row"  id="face-objects">
 
                   </div>
@@ -233,9 +233,9 @@
     <footer>
       <div id="bar">
         <ul id="progressbar">
-          <li class="active" id="step1"><a href="/">Introduction</a> </li>
-          <li class="active" id="step2"><a href="/analyzer.html"> Face analyzer</a></li>
-          <li class="active last" id="step3"><a href="/faces.html">Mugshot database</a></li>
+          <li class="active" id="step1"><a href="index.html">Introduction</a> </li>
+          <li class="active" id="step2"><a href="analyzer.html"> Face analyzer</a></li>
+          <li class="active last" id="step3"><a href="faces.html">Mugshot database</a></li>
           <!--<li id="step4"><a href="/faq.html"> FAQ</a></li>-->
         </ul>
       </div>
@@ -277,7 +277,7 @@
       document.querySelector('.faces').style.display = 'none';
       notify('To view this page you will need to analyze your face first.');
       setTimeout(function() {
-        window.location = '/analyzer.html';
+        window.location = 'analyzer.html';
       }, 5000);
 
     }
