--- a/views/index.html
+++ b/views/index.html
@@ -44,9 +44,9 @@
             <div class="col-12">
                 <nav>
                     <ul class="navigation">
-                        <li><a href="/">>_Catch your <br>Crime Profile</a></li>
-                        <li><a href="/about.html">>_About</a></li>
-                        <li><a href="/faq.html">>_Faq</a></li>
+                        <li><a href="index.html">>_Catch your <br>Crime Profile</a></li>
+                        <li><a href="about.html">>_About</a></li>
+                        <li><a href="faq.html">>_Faq</a></li>
                     </ul>
                 </nav>
             </div>
@@ -102,7 +102,7 @@
                         <!-- start column 3 -->
                         <div class="col-4  justify-content-center align-self-center">
                             <figure class="pt-5">
-                                <img src="/img/Moshed_face.gif" alt="gif">
+                                <img src="img/Moshed_face.gif" alt="gif">
                             </figure>
                         </div>
                         <!-- end column 3 -->
@@ -128,9 +128,9 @@
     <footer>
         <div id="bar">
             <ul id="progressbar">
-                <li class="active current" id="step1"><a href="/">Introduction</a> </li>
-                <li class="" id="step2"><a href="/analyzer.html"> Face analyzer</a></li>
-                <li class="" id="step3"><a href="/faces.html"> Mugshot database</a></li>
+                <li class="active current" id="step1"><a href="index.html">Introduction</a> </li>
+                <li class="" id="step2"><a href="analyzer.html"> Face analyzer</a></li>
+                <li class="" id="step3"><a href="faces.html"> Mugshot database</a></li>
                 <!--<li class="" id="step4"><a href="/faq.html"> Faq</a></li>-->
             </ul>
         </div>
