--- a/views/index.html
+++ b/views/index.html
@@ -154,7 +154,7 @@
 <!-- project script -->
 <script async src="js/app.js"></script>
 
-<script async src="js/dataset.js"></script>
+<!--<script async src="js/dataset.js"></script>-->
 
 
 </html>
