--- a/views/about.html
+++ b/views/about.html
@@ -129,7 +129,7 @@
 <!-- project script -->
 <script async src="js/app.js"></script>
 
-<script async src="js/dataset.js"></script>
+<!--<script async src="js/dataset.js"></script>-->
 
 
 </html>
