--- a/views/analyzer.html
+++ b/views/analyzer.html
@@ -2,6 +2,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible">
   <title>Catch Your Crime Profile</title>
