--- a/views/faces.html
+++ b/views/faces.html
@@ -100,7 +100,7 @@
               <fieldset class="box-border">
                 <legend class="box-border">>_Your profile</legend>
                 <div class="helper-box">
-                  <div class="helper" data-msg="This is your crime profile which is based on your facial features. You can change your gender, age, and ethnicity to see how it effects the results.">?</div>
+                  <div class="helper" data-msg="This is your crime profile which is based on your facial features. You can change your gender, age, and ethnicity to see how it effects your.">?</div>
                 </div>
 
                 <div class="content chart">
