edit text field

--- a/views/faces.html
+++ b/views/faces.html
@@ -100,7 +100,7 @@
               <fieldset class="box-border">
                 <legend class="box-border">>_Your profile</legend>
                 <div class="helper-box">
-                  <div class="helper" data-msg="This is your crime profile which is based on your facial features. You can change your gender, age, and ethnicity to see how it effects your.">?</div>
+                  <div class="helper" data-msg="This is your crime profile which is based on your facial features. You can change your gender, age, and ethnicity to see how it effects your representation within the dataset.">?</div>
                 </div>
 
                 <div class="content chart">
@@ -190,7 +190,7 @@
               <fieldset class="box-border">
                 <legend class="box-border">>_Faces with similar profile</legend>
                 <div class="helper-box">
-                  <div class="helper"  data-msg="Based on your crime profile the system will find similar faces in database with the same crime profiles. The mugshots are sorted by age from young to old">?</div>
+                  <div class="helper"  data-msg="Based on your crime profile the system will find similar faces in database with the same crime profiles. The mugshots are sorted by age from young to old.">?</div>
                 </div>
                 <div class="content faces-holder">
                   <div class="loader not-visible"><img src="img//loader9.gif"><p>Loading mugshots..</p></div>
