--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -70,6 +70,7 @@ legend{
 .cta:hover{
   color: #000000;
   background-color: $white_white;
+  border-color: $green!important;
 }
 
 
@@ -319,6 +320,10 @@ legend{
 .chart-wrapper{
   position: relative;
   width: 100%;
+}
+
+.chart{
+  padding-top: .5rem;
 }
 
 .notification-content a{
