--- a/views/analyzer.html
+++ b/views/analyzer.html
@@ -47,7 +47,7 @@
         <div class="close-box" onclick="closeNotify()">
           <div class="close">x</div>
         </div>
-        <div class="content pt-4 pb-3">
+        <div class="content pt-4 pb-2">
          <p></p>
           <div class="row options not-visible pt-1">
             <div class="col-6">
@@ -184,7 +184,7 @@
                   <div class="helper" data-msg="
                   This graph shows you your representation within the historical crime data based on your AI based profile.
 The dataset is a collection of all persons (3348350) who have been arrested on having committed a criminal offense in the Netherlands between 2005-2014.<br><br>
-Datasource: Statistics Netherlands.<br><br><a href='https://opendata.cbs.nl/statline/#/CBS/nl/dataset/81947NED/table?dl=53F99' target='_blank'>view dataset</a>"
+Datasource: Statistics Netherlands.<br><br><a href='https://opendata.cbs.nl/statline/#/CBS/nl/dataset/81947NED/table?ts=1619776089803&fromstatweb=true' target='_blank'>view dataset</a>"
 
                   >?</div>
 
