--- a/views/analyzer.html
+++ b/views/analyzer.html
@@ -299,8 +299,8 @@ Datasource: Statistics Netherlands.<br><br><a href='https://opendata.cbs.nl/stat
 <script async src="js/app.js"></script>
 <script src="js/cameraAvailablity.js"></script>
 
-<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-<script src="js/camera.js"></script>
+<!--<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>-->
+<!--<script src="js/camera.js"></script>-->
 
 
 <script>
